# ox

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  DOCKER.md  Dioxus.toml  Dockerfile  GITHUB_ACTIONS.md  docker-compose.yml  fly.toml  input.css  package.json  tailwind.config.js  tailwind.css
.github/workflows/: docker-publish.yml
.opencode/: opencode.db-shm  opencode.db-wal
assets/: main.css
src/: lib.rs  main.rs  server.rs  tailwind.rs  types.rs
src/components/: mod.rs  navbar.rs
src/components/tools/: base64_tool.rs  json_formatter.rs  mod.rs  qr_generator.rs  shared.rs  text_utilities.rs
src/pages/: blog.rs  home.rs  mod.rs  not_found.rs  tools.rs
